--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-header></app-header>
-<ul>
-  <li>{{course}}</li>
-  <li>{{student}}</li>
-</ul>
+<app-directiva></app-directiva>
+<app-clientes></app-clientes>
 <app-footer></app-footer>
