--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -5,8 +5,11 @@
     <div class="my-2 text-left">
         <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/clientes/form']">Crear Cliente</button>
     </div>
+    <div *ngIf="clientes?.length == 0" class="alert alert-info">
+        No hay registros en la base de datos.
+    </div>
     
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" *ngIf="clientes?.length > 0">
     	<thead>
     		<tr>
     			<th>ID</th>
@@ -14,15 +17,23 @@
     			<th>Apellido</th>
     			<th>Email</th>
     			<th>Fecha</th>
+                <th>Editar</th>
+                <th>Eliminar</th>
     		</tr>
     	</thead>	
     	<tbody>
     		<tr *ngFor="let cliente of clientes">
-    			<th>{{cliente.id}}</th>
-    			<th>{{cliente.nombre}}</th>
-    			<th>{{cliente.apellido}}</th>
-    			<th>{{cliente.email}}</th>
-    			<th>{{cliente.createAt}}</th>
+    			<td>{{cliente.id}}</td>
+    			<td>{{cliente.nombre}}</td>
+    			<td>{{cliente.apellido}}</td>
+    			<td>{{cliente.email}}</td>
+    			<td>{{cliente.createAt}}</td>
+                <td>
+                    <button type="button" name="button" [routerLink]="['/clientes/form', cliente.id]" class="btn btn-primary">Editar</button>                    
+                </td>
+                <td>                    
+                    <button type="button" name="button" (click) = "delete(cliente)" class="btn btn-danger">Eliminar</button>
+                </td>
     		</tr>    		
     	</tbody>
     </table>
